// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavTabs does not require history 1`] = `
<Provider app={{...}} history={{...}}>
  <WithStyles(inject-NavTabs)>
    <inject-NavTabs classes={{...}}>
      <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
        <WithStyles(Paper) className="inject-NavTabs-root-6" elevation={2}>
          <Paper className="inject-NavTabs-root-6" elevation={2} classes={{...}} component="div" square={false}>
            <div className="MuiPaper-root-7 MuiPaper-elevation2-11 MuiPaper-rounded-8 inject-NavTabs-root-6">
              <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                  <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} scrollable={true}>
                    <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" classes={{...}}>
                      <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                        <div className="MuiTabs-root-42 RSFTabsRow-root-36 inject-NavTabs-tabs-1 RSFTabsRow-root-36 inject-NavTabs-tabs-1">
                          <EventListener target="window" onResize={[Function: debounced]} />
                          <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                            <div>
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div style={{...}} />
                            </div>
                          </ScrollbarSize>
                          <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                            <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                            <div className="MuiTabs-scroller-45 RSFTabsRow-scroller-39 MuiTabs-scrollable-47" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                              <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                            Tab 1
                                                          </a>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                            Tab 1
                                                          </a>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                              </div>
                              <WithStyles(TabIndicator) className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}}>
                                <TabIndicator className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}} classes={{...}}>
                                  <span className="MuiPrivateTabIndicator-root-75 MuiPrivateTabIndicator-colorSecondary-77 MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" style={{...}} />
                                </TabIndicator>
                              </WithStyles(TabIndicator)>
                            </div>
                            <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                          </div>
                        </div>
                      </Tabs>
                    </WithStyles(Tabs)>
                  </TabsRow>
                </inject-TabsRow-with-app>
              </WithStyles(inject-TabsRow-with-app)>
            </div>
          </Paper>
        </WithStyles(Paper)>
      </NavTabs>
    </inject-NavTabs>
  </WithStyles(inject-NavTabs)>
</Provider>
`;

exports[`NavTabs renders 1`] = `
<Provider app={{...}} history={{...}}>
  <WithStyles(inject-NavTabs)>
    <inject-NavTabs classes={{...}}>
      <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
        <WithStyles(Paper) className="inject-NavTabs-root-6" elevation={2}>
          <Paper className="inject-NavTabs-root-6" elevation={2} classes={{...}} component="div" square={false}>
            <div className="MuiPaper-root-7 MuiPaper-elevation2-11 MuiPaper-rounded-8 inject-NavTabs-root-6">
              <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                  <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} scrollable={true}>
                    <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" classes={{...}}>
                      <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                        <div className="MuiTabs-root-42 RSFTabsRow-root-36 inject-NavTabs-tabs-1 RSFTabsRow-root-36 inject-NavTabs-tabs-1">
                          <EventListener target="window" onResize={[Function: debounced]} />
                          <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                            <div>
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div style={{...}} />
                            </div>
                          </ScrollbarSize>
                          <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                            <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                            <div className="MuiTabs-scroller-45 RSFTabsRow-scroller-39 MuiTabs-scrollable-47" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                              <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                            Tab 1
                                                          </a>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch={{...}} onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                            Tab 1
                                                          </a>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                              </div>
                              <WithStyles(TabIndicator) className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}}>
                                <TabIndicator className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}} classes={{...}}>
                                  <span className="MuiPrivateTabIndicator-root-75 MuiPrivateTabIndicator-colorSecondary-77 MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" style={{...}} />
                                </TabIndicator>
                              </WithStyles(TabIndicator)>
                            </div>
                            <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                          </div>
                        </div>
                      </Tabs>
                    </WithStyles(Tabs)>
                  </TabsRow>
                </inject-TabsRow-with-app>
              </WithStyles(inject-TabsRow-with-app)>
            </div>
          </Paper>
        </WithStyles(Paper)>
      </NavTabs>
    </inject-NavTabs>
  </WithStyles(inject-NavTabs)>
</Provider>
`;

exports[`NavTabs uses prefetch 1`] = `
<Provider app={{...}} history={{...}}>
  <WithStyles(inject-NavTabs)>
    <inject-NavTabs classes={{...}}>
      <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
        <WithStyles(Paper) className="inject-NavTabs-root-6" elevation={2}>
          <Paper className="inject-NavTabs-root-6" elevation={2} classes={{...}} component="div" square={false}>
            <div className="MuiPaper-root-7 MuiPaper-elevation2-11 MuiPaper-rounded-8 inject-NavTabs-root-6">
              <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                  <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} scrollable={true}>
                    <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" classes={{...}}>
                      <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-36 inject-NavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                        <div className="MuiTabs-root-42 RSFTabsRow-root-36 inject-NavTabs-tabs-1 RSFTabsRow-root-36 inject-NavTabs-tabs-1">
                          <EventListener target="window" onResize={[Function: debounced]} />
                          <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                            <div>
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div style={{...}} />
                            </div>
                          </ScrollbarSize>
                          <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                            <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                            <div className="MuiTabs-scroller-45 RSFTabsRow-scroller-39 MuiTabs-scrollable-47" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                              <div className="MuiTabs-flexContainer-43 RSFTabsRow-centered-41">
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch="always" onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch="always" onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/1" prefetch="always" onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/1" data-moov-rel="prefetch">
                                                            Tab 1
                                                          </a>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                                <inject-Track-with-app event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                  <Track event="topNavClicked" item={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                    <WithStyles(Tab) classes={{...}} label={{...}} onClick={[Function]}>
                                      <Tab label={{...}} onClick={[Function]} classes={{...}} disabled={false} textColor="inherit">
                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                          <ButtonBase focusRipple={true} className="MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                            <button className="MuiButtonBase-root-64 MuiTab-root-52 inject-NavTabs-tab-2 MuiTab-textColorInherit-54" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                              <span className="MuiTab-wrapper-60">
                                                <span className="MuiTab-labelContainer-61">
                                                  <span className="MuiTab-label-62">
                                                    <WithStyles(inject-Link) state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch="visible" onClick={[undefined]} data-th="topNavClicked">
                                                      <inject-Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch="visible" onClick={[undefined]} data-th="topNavClicked" classes={{...}}>
                                                        <Link state={[Function: state]} className="inject-NavTabs-link-4" to="/2" prefetch="visible" onClick={[undefined]} data-th="topNavClicked" classes={{...}} history={{...}} router={[undefined]} location={{...}} anchorProps={{...}}>
                                                          <VisibilitySensor onChange={[Function]} partialVisibility={true} active={true} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} offset={{...}} containment={{...}}>
                                                            <a data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-67 inject-NavTabs-link-4" style={[undefined]} onClick={[Function]} href="https://example.com/2" data-moov-rel="prefetch">
                                                              Tab 1
                                                            </a>
                                                          </VisibilitySensor>
                                                        </Link>
                                                      </inject-Link>
                                                    </WithStyles(inject-Link)>
                                                  </span>
                                                </span>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                  <TouchRipple center={false} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-68" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-68" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </button>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </Tab>
                                    </WithStyles(Tab)>
                                  </Track>
                                </inject-Track-with-app>
                              </div>
                              <WithStyles(TabIndicator) className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}}>
                                <TabIndicator className="MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" color="secondary" style={{...}} classes={{...}}>
                                  <span className="MuiPrivateTabIndicator-root-75 MuiPrivateTabIndicator-colorSecondary-77 MuiTabs-indicator-50 RSFTabsRow-indicator-34 RSFTabsRow-noSelection-35" style={{...}} />
                                </TabIndicator>
                              </WithStyles(TabIndicator)>
                            </div>
                            <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49">
                              <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" classes={{...}}>
                                <div className="MuiPrivateTabScrollButton-root-51 MuiTabs-scrollButtons-48 MuiTabs-scrollButtonsAuto-49" />
                              </TabScrollButton>
                            </WithStyles(TabScrollButton)>
                          </div>
                        </div>
                      </Tabs>
                    </WithStyles(Tabs)>
                  </TabsRow>
                </inject-TabsRow-with-app>
              </WithStyles(inject-TabsRow-with-app)>
            </div>
          </Paper>
        </WithStyles(Paper)>
      </NavTabs>
    </inject-NavTabs>
  </WithStyles(inject-NavTabs)>
</Provider>
`;
